@@ -1,6 +1,7 @@
 Version UNRELEASED - 2012-XX-XX
  * Add %license% tag
  * Made %writer% available to tagger scripts and plugins with contents of songwriter (PICARD-21)
+ * Load/save free-text tags for ID3 as TXXX frames (PICARD-148)
 
 Version 0.16 - 2011-10-23
  * Added AcoustID support.
